# Trialtask

./: .gitignore  db.sqlite3  pyproject.toml
core/: admin.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py
network/: admin.py  models.py  serializers.py  urls.py  views.py
trialtask/: admin.py  asgi.py  fields.py  settings.py  urls.py  wsgi.py
